@@ -131,6 +131,7 @@ There are multiple improvements to the documentation theme this release, here ar
  * Removed the extra dot in the Wagtail version shown within the admin settings menu item (Loveth Omokaro)
  * Fully remove the obsolete `wagtailsearch_editorspick` table that prevents flushing the database (Matt Westcott)
  * Update latest version message on Dashboard to accept dev build version format used on nlightly builds (Sam Moran)
+ * Ensure `ChooserBlock.extract_references` uses the model class, not the model string (Alex Tomkins)
 
 ## Upgrade considerations
 
